* Fixed: When setting an element to pull from a list of pages, the total number of pages returned shouldn't be interfered with.
* Fixed: Contact Bar element was outputting the set of icons twice.
* Fixed: SPAN HTML tags showing in texture browser.
* Fixed: When `themeblvd_tabs_deep_linking` is filtered to true, tab content wasn't changing properly.
* Fixed: More minor RTL bug fixes.
    * Frontend post grid/showcase filtering and masonry now aligns correctly to the right.
    * Tabs and pills of Tabs element now align properly to right.
    * Panels no longer force text to be aligned left.
    * Pricing table columns now display in correct order, from right-to-left.
    * Progress bars now display and animate out from right.
    * "Custom CSS" option code editor on theme options page now works with RTL.

--------------------------------------------------------------

2.0.4 - 12/11/2015
------------------

* Improvement: Some frontend RTL fixes and improvements.
* Improvement: Admin RTL fixes and improvements.
* Improvement: Frontend post grid/showcase filtering now also effects navigating items in corresponding lightbox gallery.
* Improvement: Minor comment form styling adjustments for changes in WordPress 4.4+.
* Improvement: Now using `srcset` for HiDPI/Retina logo with no javascript, to match practices of WordPress 4.4+.
* Fixed: Dropdown menus not displaying when adding a parallax background image or video background to site header from theme options.
* Fixed: Post slider style #2 captions not displaying correctly.
* Fixed: Javascript conflicts with JetPack on Edit Page/Post screens.
* Fixed: Hero unit text not displaying above background video.
* Fixed: WPML-translated pages not allowing to save a unique, translated custom layout.
* Fixed: Display issues with new post embedding, introduced in WordPress 4.4.

--------------------------------------------------------------

2.0.3 - 11/10/2015
------------------
